--- a/ФП_Машталер_Андрій.md
+++ b/ФП_Машталер_Андрій.md
@@ -39,6 +39,22 @@ flowchart LR
   CW -. сповіщення .-> SNS[(Amazon SNS)]
 ```
 > Поточна конфігурація — single instance EB (Nginx проксить на `127.0.0.1:8000` до Gunicorn). Для вимоги "балансування + авто‑масштабування" наведено кроки нижче (переведення на ALB + Auto Scaling).
+>
+> Internet
+   │
+   ▼
+Application Load Balancer (HTTP/HTTPS)
+   │
+   ▼
+Elastic Beanstalk Auto Scaling Group (EC2, Amazon Linux 2023)
+   └─ Nginx (reverse proxy) → Gunicorn → Flask app
+         │
+         └────────► Amazon RDS for MySQL (emaildb)
+                         │
+                         └─ Automated backups / monitoring
+   │
+   └─ Logs, health, metrics ─────────► Amazon CloudWatch (Logs & Metrics)
+
 
 ---
 
